# agent-mem

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.mcp  README.md  docker-compose.yml  mem_service.py  pyproject.toml  requirements.txt
.claude/: settings.json
api/: config.py  db.py  embeddings.py  main.py  models.py  schemas.py  staleness.py
api/routers/: memories.py  search.py  sessions.py  workspaces.py
cli/: client.py  main.py
cli/commands/: memories.py  reindex.py  review.py  search.py  sessions.py  status.py  workspaces.py
hooks/: session_end.py  session_start.py
mcp/: __init__.py  server.py  tools.py
migrations/: env.py
migrations/versions/: 29754652310f_initial.py
tests/: conftest.py  test_api_memories.py  test_api_search.py  test_api_sessions.py  test_api_workspaces.py  test_embeddings.py  test_staleness.py
