[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mem"
version = "0.1.0"
requires-python = ">=3.13"

[project.scripts]
mem = "cli.main:app"
mem-service = "mem_service:main"

[tool.setuptools]
py-modules = ["mem_service"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "mcp*", "cli*", "hooks*"]
